# RFDetrTraining

./: .env  .gitignore  README.md  load_data.py  main.py  pyproject.toml  task.py
training_app/: setup.py
training_app/trainer/: __init__.py  train.py
